# gestor_gimnasio

./: .clinerules  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
DOCS/: CHANGELOG.md  DOC.md  TODO.md
src/: config.py  data.py  main.py
src/GUI/: DTOs.py  README.md  controllers.py  styles.py  tables.py  theme.py  views.py
src/GUI/assets/themes/: colors.py  theme_manager.py
src/GUI/contexts/: service_context.py
src/application/: README.md  services.py
src/data/: gimnasio.db
src/domain/: README.md  entities.py  exceptions.py  interfaces.py
src/infrastructure/: README.md  db_conn.py  sqlite3_repo.py
src/tests/: __init__.py  test_domain.py  test_services.py
