[project]
name = "Learn Lifting"
version = "1.0.1"
description = "Gestor de rutinas de clientes para gimnasios"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "PabloSFK", email = "pablosfk@gmail.com" }
]
dependencies = [
  "flet>=0.80.1",
  "flet-datatable2",
  "Pillow",
  "qrcode[pil]"
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.1",
]

[tool.flet]
org = "com.pablosfk"
product = "learnlifting"
company = "PabloSFK"
copyright = "Copyright (C) 2026 by PabloSFK"

[tool.flet.app]
path = "src"